--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,11 +1,16 @@
 # Stage 1: Build Next.js
-FROM node:18 AS build
+FROM node:18 AS builder
 WORKDIR /app
-COPY package.json .
+COPY package.json package-lock.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-# Stage 2: Serve ด้วย Nginx
-FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
+# Stage 2: Serve Next.js
+FROM node:18-slim
+WORKDIR /app
+COPY --from=builder /app/.next/standalone ./
+COPY --from=builder /app/.next/static ./.next/static
+ENV PORT=8080
+EXPOSE 8080
+CMD ["node", "server.js"]
